# tp

TD1_s2/src/: fraction.cpp  fraction.hpp  main.cpp  nouveau exo.cpp
TD2_s2/: CMakeLists.txt
TD2_s2/src/: td.cpp
TD3_s2/exo1/src/: td.cpp
TD3_s2/exo2/src/: td.cpp
TD3_s2/src/: td.cpp
TD4_s2/exo1/src/: td.cpp
TD4_s2/exo2/src/: td.cpp
TD4_s2/exo3/src/: td.cpp
TD5_s2/exo1/src/: td.cpp
TD5_s2/exo2/src/: td.cpp
TD5_s2/exo3/src/: td.cpp
TD6_s2/exo1/: CMakeLists.txt
TD6_s2/exo1/src/: exo1.cpp
TD7_s2/exo1/src/: td.cpp
